[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP","B","SIM","PL","RUF"]
ignore = ["E501"]                 # HA allows long lines for URLs, etc.
src = ["custom_components", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
files = ["custom_components"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["custom_components/ezviz_cloud"]